# apds9253-rs

./: Cargo.toml  README.md  build.rs  device.yaml
examples/linux/: Cargo.toml
examples/nrf/: Cargo.toml
src/: lib.rs  ll.rs
