[package]
name = "apds9253-nrf-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Embassy dependencies
embassy-executor = { version = "0.7", default-features = false, features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-time = { version = "0.4", default-features = false, features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.5", default-features = false, features = [
  "defmt",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "rt",
] }
embassy-futures = "0.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

# Utility dependencies
heapless = "0.8"
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
# Logging and debugging
defmt = "1.0"
defmt-rtt = "1.0"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
# Hardware abstraction
cortex-m-rt = "0.7"
panic-probe = { version = "1.0", features = ["print-defmt"] }

# Random number generation (for animations)
rand = { version = "0.9", default-features = false }
rand_core = "0.9"
rand_chacha = { version = "0.9", default-features = false }

[profile.release]
debug = 2

[features]
default = []
